ns-default/k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: commits-to
  labels:
    app.kubernetes.io/instance: commits-to
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: commits-to
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: commits-to
    app.kubernetes.io/name: commits-to
    app.kubernetes.io/part-of: commits-to
    app.kubernetes.io/version: v1
  name: commits-to
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commits-to
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/trace-collector: oc-collector.tracing:55678
      labels:
        app: commits-to
    spec:
      containers:
      - command: ["npm"]
        args: ["start"]
        imagePullPolicy: IfNotPresent
        image: quay.io/kingdonb/commitsto:master-73ade8a
        name: commits-to
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            cpu: 100m
